# marlowe-agda

./: .gitignore  ReadMe.md  Setup.hs  cabal.project  flake.nix  marlowe-agda.cabal  marlowe.agda-lib  shell.nix
.github/workflows/: formal-spec.yaml
app/: Main.hs  Serialization.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
exe/: Main.hs
formal-spec/: Everything.agda  Makefile  marlowe-spec.agda-lib
formal-spec/Marlowe/: Abstract.agda
formal-spec/Marlowe/Examples/: Cardano.lagda.md  Escrow.lagda.md
formal-spec/Marlowe/Language/: Properties.lagda.md
formal-spec/Marlowe/Semantics/: Evaluate.lagda.md  Operate.lagda.md  Reduce.lagda.md
formal-spec/Marlowe/Semantics/Operate/: Properties.lagda.md
formal-spec/Marlowe/Semantics/Reduce/: Properties.lagda.md
formal-spec/hs-src/: marlowe-spec.cabal
formal-spec/hs-src/exe/: Main.hs
formal-spec/hs-src/src/: Lib.hs
formal-spec/hs-src/src/Marlowe/: JSON.hs
nix/: agda-with-stdlib.nix  agda2hs-project.nix  agda2hs.nix  emacs-with-packages.nix  outputs.nix  project.nix  shell.nix
src/: .gitignore  Primitives.agda  main.agda  main.lagda.md  marlowe.agda-lib
src/Contrib/: DecEq.agda
src/Contrib/Data/List/: AssocList.agda  Membership.agda
src/Contrib/Data/List/Membership/: Properties.agda
src/Contrib/Data/Nat/: Properties.agda
src/Marlowe/: Abstract.agda  Language.lagda.md
src/Marlowe/Core/: Contract.hs
src/Marlowe/Examples/: Cardano.lagda.md  Escrow.agda  Escrow.lagda.md  Operate.lagda.md  Reduce.lagda.md
src/Marlowe/Language/: Contract.agda  Contract.lagda.md  Input.agda  Input.lagda.md  Properties.lagda.md  State.agda  State.lagda.md  Transaction.agda  Transaction.lagda.md
src/Marlowe/Language/Analysis/: Constraints.agda  Constraints.hs
src/Marlowe/Language/State/: Properties.agda  Properties.lagda.md
src/Marlowe/Semantics/: Evaluate.agda  Evaluate.lagda.md  Operate.agda  Operate.lagda.md  Reduce.agda  Reduce.lagda.md
src/Marlowe/Semantics/Evaluate/: Properties.agda  Properties.lagda.md
src/Marlowe/Semantics/Operate/: Properties.agda  Properties.lagda.md
src/Marlowe/Semantics/Reduce/: Properties.agda  Properties.lagda.md
src/Marlowe/Serialization/: Json.agda
