cabal-version:      3.0
name:               marlowe-agda
version:            0.0.0.1
synopsis:
homepage:           https://github.com/input-output-hk/marlowe-agda
license:            Apache-2.0
license-files:      LICENSE
author:             Yves Hauser
maintainer:         yves.hauser@iohk.io
category:           Development
data-files:
  marlowe.agda-lib
  src/**/*.agda
  src/**/*.lagda.md


-- This makes cabal rebuild if any of these files change, which allow the
-- custom setup to fire and rebuild the Haskell sources
build-type:         Custom

custom-setup
  setup-depends:
    , base
    , Cabal
    , process
    , turtle   >=1.6

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -fwarn-incomplete-patterns -fno-warn-overlapping-patterns

library
  import:          lang
  hs-source-dirs:  src
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , composition-prelude
    , cryptonite
    , extra
    , ieee754
    , megaparsec
    , memory
    , optparse-applicative
    , process
    , scientific
    , text
    , transformers

  exposed-modules:
    Marlowe.Core.Contract

  -- WARNING: Order is important! MAlonzo modules must be listed last.
  -- But cabal-fmt reorders modules alphabetically, so we use two 
  -- exposed-modules subsets to work around that. See Setup.hs
  exposed-modules:
    MAlonzo.RTE
    MAlonzo.RTE.Float
    MAlonzo.Code.IO
    MAlonzo.Code.Codata.Musical.Colist.Base
    MAlonzo.Code.Codata.Musical.Conat.Base
    MAlonzo.Code.Marlowe.Abstract
    MAlonzo.Code.Marlowe.Examples.Cardano
    MAlonzo.Code.Marlowe.Examples.Reduce
    MAlonzo.Code.Marlowe.Examples.Operate
    MAlonzo.Code.Marlowe.Examples.Escrow
    MAlonzo.Code.Marlowe.Language
    MAlonzo.Code.Marlowe.Language.Properties
    MAlonzo.Code.Marlowe.Semantics.Reduce
    MAlonzo.Code.Marlowe.Semantics.Reduce.Properties
    MAlonzo.Code.Marlowe.Semantics.Operate
    MAlonzo.Code.Marlowe.Semantics.Operate.Properties
    MAlonzo.Code.Marlowe.Semantics.Evaluate
    MAlonzo.Code.Marlowe.Semantics.Evaluate.Properties
    MAlonzo.Code.Induction.WellFounded
    MAlonzo.Code.Level
    MAlonzo.Code.Contrib.DecEq
    MAlonzo.Code.Contrib.Data.List.AssocList
    MAlonzo.Code.Function.Structures.Biased
    MAlonzo.Code.Function.Bundles
    MAlonzo.Code.Function.Core
    MAlonzo.Code.Function.Structures
    MAlonzo.Code.Function.Properties.Inverse.HalfAdjointEquivalence
    MAlonzo.Code.Function.Properties.RightInverse
    MAlonzo.Code.Function.Properties.Bijection
    MAlonzo.Code.Function.Properties.Inverse
    MAlonzo.Code.Function.Properties.Surjection
    MAlonzo.Code.Function.Consequences
    MAlonzo.Code.Function.Consequences.Setoid
    MAlonzo.Code.Function.Consequences.Propositional
    MAlonzo.Code.Function.Dependent.Bundles
    MAlonzo.Code.Function.Base
    MAlonzo.Code.Function.Strict
    MAlonzo.Code.Function.Indexed.Relation.Binary.Equality
    MAlonzo.Code.Function.Related.TypeIsomorphisms
    MAlonzo.Code.Function.Related.Propositional
    MAlonzo.Code.Function.Metric.Bundles
    MAlonzo.Code.Function.Metric.Core
    MAlonzo.Code.Function.Metric.Nat.Bundles
    MAlonzo.Code.Function.Metric.Nat.Core
    MAlonzo.Code.Function.Metric.Nat.Structures
    MAlonzo.Code.Function.Metric.Nat.Definitions
    MAlonzo.Code.Function.Metric.Structures
    MAlonzo.Code.Function.Metric.Nat
    MAlonzo.Code.Function.Metric.Definitions
    MAlonzo.Code.Function.Definitions
    MAlonzo.Code.Function.Construct.Symmetry
    MAlonzo.Code.Function.Construct.Composition
    MAlonzo.Code.Function.Construct.Identity
    MAlonzo.Code.Agda.Primitive
    MAlonzo.Code.Agda.Builtin.Coinduction
    MAlonzo.Code.Agda.Builtin.String
    MAlonzo.Code.Agda.Builtin.Sigma
    MAlonzo.Code.Agda.Builtin.Bool
    MAlonzo.Code.Agda.Builtin.IO
    MAlonzo.Code.Agda.Builtin.Int
    MAlonzo.Code.Agda.Builtin.Equality
    MAlonzo.Code.Agda.Builtin.List
    MAlonzo.Code.Agda.Builtin.Char.Properties
    MAlonzo.Code.Agda.Builtin.Char
    MAlonzo.Code.Agda.Builtin.String.Properties
    MAlonzo.Code.Agda.Builtin.Unit
    MAlonzo.Code.Agda.Builtin.Strict
    MAlonzo.Code.Agda.Builtin.Nat
    MAlonzo.Code.Agda.Builtin.Maybe
    MAlonzo.Code.Relation.Unary.Properties
    MAlonzo.Code.Relation.Nullary
    MAlonzo.Code.Relation.Binary.Structures.Biased
    MAlonzo.Code.Relation.Binary.Reflection
    MAlonzo.Code.Relation.Binary.Bundles
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Triple
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Double
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Single
    MAlonzo.Code.Relation.Binary.Reasoning.Preorder
    MAlonzo.Code.Relation.Binary.Reasoning.Syntax
    MAlonzo.Code.Relation.Binary.Reasoning.Setoid
    MAlonzo.Code.Relation.Binary.Core
    MAlonzo.Code.Relation.Binary.Structures
    MAlonzo.Code.Relation.Binary.Properties.TotalOrder
    MAlonzo.Code.Relation.Binary.Properties.Poset
    MAlonzo.Code.Relation.Binary.Properties.DecTotalOrder
    MAlonzo.Code.Relation.Binary.Properties.Preorder
    MAlonzo.Code.Relation.Binary.Properties.Setoid
    MAlonzo.Code.Relation.Binary.Lattice.Bundles
    MAlonzo.Code.Relation.Binary.Lattice.Structures
    MAlonzo.Code.Relation.Binary.Lattice.Definitions
    MAlonzo.Code.Relation.Binary.Consequences
    MAlonzo.Code.Relation.Binary.Lattice
    MAlonzo.Code.Relation.Binary.PropositionalEquality
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Bundles
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Core
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Structures
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Definitions
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Construct.Trivial
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous
    MAlonzo.Code.Relation.Binary.Morphism.Structures
    MAlonzo.Code.Relation.Binary.Morphism.Definitions
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Core
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Properties
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Algebra
    MAlonzo.Code.Relation.Binary.Definitions
    MAlonzo.Code.Relation.Binary.Construct.Closure.Reflexive
    MAlonzo.Code.Relation.Binary.Construct.Closure.Reflexive.Properties
    MAlonzo.Code.Relation.Binary.Construct.Subst.Equality
    MAlonzo.Code.Relation.Binary.Construct.Intersection
    MAlonzo.Code.Relation.Binary.Construct.Constant.Core
    MAlonzo.Code.Relation.Binary.Construct.On
    MAlonzo.Code.Relation.Binary.Construct.NonStrictToStrict
    MAlonzo.Code.Relation.Binary.Construct.NaturalOrder.Left
    MAlonzo.Code.Relation.Binary.Construct.Flip.EqAndOrd
    MAlonzo.Code.Relation.Binary
    MAlonzo.Code.Relation.Nullary.Decidable
    MAlonzo.Code.Relation.Nullary.Negation
    MAlonzo.Code.Relation.Nullary.Negation.Core
    MAlonzo.Code.Relation.Nullary.Reflects
    MAlonzo.Code.Relation.Nullary.Indexed
    MAlonzo.Code.Relation.Nullary.Decidable.Core
    MAlonzo.Code.Relation.Unary
    MAlonzo.Code.Axiom.Extensionality.Propositional
    MAlonzo.Code.Axiom.UniquenessOfIdentityProofs
    MAlonzo.Code.Induction
    MAlonzo.Code.Effect.Functor
    MAlonzo.Code.Effect.Monad
    MAlonzo.Code.Effect.Applicative
    MAlonzo.Code.Effect.Empty
    MAlonzo.Code.Effect.Choice
    MAlonzo.Code.Algebra.Structures.Biased
    MAlonzo.Code.Algebra.Bundles.Raw
    MAlonzo.Code.Algebra.Bundles
    MAlonzo.Code.Algebra.Definitions.RawMagma
    MAlonzo.Code.Algebra.Definitions.RawMonoid
    MAlonzo.Code.Algebra.Definitions.RawSemiring
    MAlonzo.Code.Algebra.Core
    MAlonzo.Code.Algebra.Structures
    MAlonzo.Code.Algebra.Properties.Semiring.Exp
    MAlonzo.Code.Algebra.Properties.Monoid.Mult
    MAlonzo.Code.Algebra.Properties.Semigroup
    MAlonzo.Code.Algebra.Properties.RingWithoutOne
    MAlonzo.Code.Algebra.Properties.CommutativeSemigroup
    MAlonzo.Code.Algebra.Properties.AbelianGroup
    MAlonzo.Code.Algebra.Properties.Ring
    MAlonzo.Code.Algebra.Properties.Group
    MAlonzo.Code.Algebra.Lattice.Bundles.Raw
    MAlonzo.Code.Algebra.Lattice.Bundles
    MAlonzo.Code.Algebra.Lattice.Structures
    MAlonzo.Code.Algebra.Lattice.Properties.DistributiveLattice
    MAlonzo.Code.Algebra.Lattice.Properties.BooleanAlgebra
    MAlonzo.Code.Algebra.Lattice.Properties.Lattice
    MAlonzo.Code.Algebra.Lattice.Properties.Semilattice
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinMaxOp
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinOp
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MaxOp
    MAlonzo.Code.Algebra.Consequences.Base
    MAlonzo.Code.Algebra.Consequences.Setoid
    MAlonzo.Code.Algebra.Consequences.Propositional
    MAlonzo.Code.Algebra.Solver.Ring.Simple
    MAlonzo.Code.Algebra.Solver.Ring.Lemmas
    MAlonzo.Code.Algebra.Solver.Ring.AlmostCommutativeRing
    MAlonzo.Code.Algebra.Solver.Ring
    MAlonzo.Code.Algebra.Morphism.Structures
    MAlonzo.Code.Algebra.Morphism.Definitions
    MAlonzo.Code.Algebra.Morphism
    MAlonzo.Code.Algebra.Definitions
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Max
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Base
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MinMaxOp
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Min
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MinOp
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MaxOp
    MAlonzo.Code.Algebra.Construct.LiftedChoice
    MAlonzo.Code.Algebra
    MAlonzo.Code.Data.String
    MAlonzo.Code.Data.Parity.Base
    MAlonzo.Code.Data.Product
    MAlonzo.Code.Data.Vec.Base
    MAlonzo.Code.Data.Vec.Functional
    MAlonzo.Code.Data.Vec.NZ45Zary
    MAlonzo.Code.Data.Sign.Base
    MAlonzo.Code.Data.Sign.Properties
    MAlonzo.Code.Data.Nat.DivMod.Core
    MAlonzo.Code.Data.Nat.Divisibility
    MAlonzo.Code.Data.Nat.Divisibility.Core
    MAlonzo.Code.Data.Nat.Show
    MAlonzo.Code.Data.Nat.Base
    MAlonzo.Code.Data.Nat.Induction
    MAlonzo.Code.Data.Nat.DivMod
    MAlonzo.Code.Data.Nat.GeneralisedArithmetic
    MAlonzo.Code.Data.Nat.Solver
    MAlonzo.Code.Data.Nat.Properties
    MAlonzo.Code.Data.List.Effectful
    MAlonzo.Code.Data.List.Relation.Unary.AllPairs
    MAlonzo.Code.Data.List.Relation.Unary.All
    MAlonzo.Code.Data.List.Relation.Unary.Unique.Setoid
    MAlonzo.Code.Data.List.Relation.Unary.AllPairs.Core
    MAlonzo.Code.Data.List.Relation.Unary.All.Properties
    MAlonzo.Code.Data.List.Relation.Unary.Any
    MAlonzo.Code.Data.List.Relation.Unary.Any.Properties
    MAlonzo.Code.Data.List.Relation.Binary.Subset.Setoid
    MAlonzo.Code.Data.List.Relation.Binary.Subset.Propositional
    MAlonzo.Code.Data.List.Relation.Binary.Pointwise
    MAlonzo.Code.Data.List.Relation.Binary.Lex.Core
    MAlonzo.Code.Data.List.Relation.Binary.Lex.Strict
    MAlonzo.Code.Data.List.Relation.Binary.Equality.Setoid
    MAlonzo.Code.Data.List.Relation.Binary.Equality.Propositional
    MAlonzo.Code.Data.List.Relation.Binary.Lex
    MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Base
    MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Properties
    MAlonzo.Code.Data.List.Base
    MAlonzo.Code.Data.List.Extrema
    MAlonzo.Code.Data.List.Extrema.Core
    MAlonzo.Code.Data.List.NonEmpty.Base
    MAlonzo.Code.Data.List.Membership.DecSetoid
    MAlonzo.Code.Data.List.Membership.Propositional.Properties.Core
    MAlonzo.Code.Data.List.Membership.Propositional.Properties
    MAlonzo.Code.Data.List.Membership.Setoid.Properties
    MAlonzo.Code.Data.List.Membership.Setoid
    MAlonzo.Code.Data.List.Membership.Propositional
    MAlonzo.Code.Data.List.Membership.DecPropositional
    MAlonzo.Code.Data.List.Properties
    MAlonzo.Code.Data.Bool
    MAlonzo.Code.Data.Sum.Function.Setoid
    MAlonzo.Code.Data.Sum.Function.Propositional
    MAlonzo.Code.Data.Sum.Relation.Binary.Pointwise
    MAlonzo.Code.Data.Sum.Base
    MAlonzo.Code.Data.Sum.Properties
    MAlonzo.Code.Data.Sum.Algebra
    MAlonzo.Code.Data.Unit.Polymorphic.Base
    MAlonzo.Code.Data.Unit.Polymorphic.Properties
    MAlonzo.Code.Data.Unit.Base
    MAlonzo.Code.Data.Unit.Polymorphic
    MAlonzo.Code.Data.Unit.Properties
    MAlonzo.Code.Data.List
    MAlonzo.Code.Data.Char.Base
    MAlonzo.Code.Data.Char.Properties
    MAlonzo.Code.Data.Char
    MAlonzo.Code.Data.String.Base
    MAlonzo.Code.Data.String.Properties
    MAlonzo.Code.Data.Unit
    MAlonzo.Code.Data.Maybe.Effectful
    MAlonzo.Code.Data.Maybe.Relation.Unary.All
    MAlonzo.Code.Data.Maybe.Relation.Unary.Any
    MAlonzo.Code.Data.Maybe.Base
    MAlonzo.Code.Data.Integer
    MAlonzo.Code.Data.Fin.Patterns
    MAlonzo.Code.Data.Fin.Base
    MAlonzo.Code.Data.Fin.Properties
    MAlonzo.Code.Data.Product.Function.NonDependent.Setoid
    MAlonzo.Code.Data.Product.Function.NonDependent.Propositional
    MAlonzo.Code.Data.Product.Function.Dependent.Propositional
    MAlonzo.Code.Data.Product.Relation.Unary.All
    MAlonzo.Code.Data.Product.Relation.Binary.Pointwise.NonDependent
    MAlonzo.Code.Data.Product.Base
    MAlonzo.Code.Data.Product.Properties
    MAlonzo.Code.Data.Product.Algebra
    MAlonzo.Code.Data.Sum
    MAlonzo.Code.Data.Nat
    MAlonzo.Code.Data.Sign
    MAlonzo.Code.Data.Empty
    MAlonzo.Code.Data.Empty.Polymorphic
    MAlonzo.Code.Data.Empty.Irrelevant
    MAlonzo.Code.Data.Irrelevant
    MAlonzo.Code.Data.Bool.Base
    MAlonzo.Code.Data.Bool.Properties
    MAlonzo.Code.Data.These.Base
    MAlonzo.Code.Data.Integer.Base
    MAlonzo.Code.Data.Integer.DivMod
    MAlonzo.Code.Data.Integer.Properties
    MAlonzo.Code.Data.Digit
    MAlonzo.Code.Data.Maybe
    MAlonzo.Code.Function
    MAlonzo.Code.IO.Base
    MAlonzo.Code.IO.Finite
    MAlonzo.Code.IO.Primitive
    MAlonzo.Code.IO.Primitive.Finite
    MAlonzo.Code.Qmain

  autogen-modules:
    MAlonzo.RTE
    MAlonzo.RTE.Float
    MAlonzo.Code.IO
    MAlonzo.Code.Codata.Musical.Colist.Base
    MAlonzo.Code.Codata.Musical.Conat.Base
    MAlonzo.Code.Marlowe.Abstract
    MAlonzo.Code.Marlowe.Examples.Cardano
    MAlonzo.Code.Marlowe.Examples.Reduce
    MAlonzo.Code.Marlowe.Examples.Operate
    MAlonzo.Code.Marlowe.Examples.Escrow
    MAlonzo.Code.Marlowe.Language
    MAlonzo.Code.Marlowe.Language.Properties
    MAlonzo.Code.Marlowe.Semantics.Reduce
    MAlonzo.Code.Marlowe.Semantics.Reduce.Properties
    MAlonzo.Code.Marlowe.Semantics.Operate
    MAlonzo.Code.Marlowe.Semantics.Operate.Properties
    MAlonzo.Code.Marlowe.Semantics.Evaluate
    MAlonzo.Code.Marlowe.Semantics.Evaluate.Properties
    MAlonzo.Code.Induction.WellFounded
    MAlonzo.Code.Level
    MAlonzo.Code.Contrib.DecEq
    MAlonzo.Code.Contrib.Data.List.AssocList
    MAlonzo.Code.Function.Structures.Biased
    MAlonzo.Code.Function.Bundles
    MAlonzo.Code.Function.Core
    MAlonzo.Code.Function.Structures
    MAlonzo.Code.Function.Properties.Inverse.HalfAdjointEquivalence
    MAlonzo.Code.Function.Properties.RightInverse
    MAlonzo.Code.Function.Properties.Bijection
    MAlonzo.Code.Function.Properties.Inverse
    MAlonzo.Code.Function.Properties.Surjection
    MAlonzo.Code.Function.Consequences
    MAlonzo.Code.Function.Consequences.Setoid
    MAlonzo.Code.Function.Consequences.Propositional
    MAlonzo.Code.Function.Dependent.Bundles
    MAlonzo.Code.Function.Base
    MAlonzo.Code.Function.Strict
    MAlonzo.Code.Function.Indexed.Relation.Binary.Equality
    MAlonzo.Code.Function.Related.TypeIsomorphisms
    MAlonzo.Code.Function.Related.Propositional
    MAlonzo.Code.Function.Metric.Bundles
    MAlonzo.Code.Function.Metric.Core
    MAlonzo.Code.Function.Metric.Nat.Bundles
    MAlonzo.Code.Function.Metric.Nat.Core
    MAlonzo.Code.Function.Metric.Nat.Structures
    MAlonzo.Code.Function.Metric.Nat.Definitions
    MAlonzo.Code.Function.Metric.Structures
    MAlonzo.Code.Function.Metric.Nat
    MAlonzo.Code.Function.Metric.Definitions
    MAlonzo.Code.Function.Definitions
    MAlonzo.Code.Function.Construct.Symmetry
    MAlonzo.Code.Function.Construct.Composition
    MAlonzo.Code.Function.Construct.Identity
    MAlonzo.Code.Agda.Primitive
    MAlonzo.Code.Agda.Builtin.Coinduction
    MAlonzo.Code.Agda.Builtin.String
    MAlonzo.Code.Agda.Builtin.Sigma
    MAlonzo.Code.Agda.Builtin.Bool
    MAlonzo.Code.Agda.Builtin.IO
    MAlonzo.Code.Agda.Builtin.Int
    MAlonzo.Code.Agda.Builtin.Equality
    MAlonzo.Code.Agda.Builtin.List
    MAlonzo.Code.Agda.Builtin.Char.Properties
    MAlonzo.Code.Agda.Builtin.Char
    MAlonzo.Code.Agda.Builtin.String.Properties
    MAlonzo.Code.Agda.Builtin.Unit
    MAlonzo.Code.Agda.Builtin.Strict
    MAlonzo.Code.Agda.Builtin.Nat
    MAlonzo.Code.Agda.Builtin.Maybe
    MAlonzo.Code.Relation.Unary.Properties
    MAlonzo.Code.Relation.Nullary
    MAlonzo.Code.Relation.Binary.Structures.Biased
    MAlonzo.Code.Relation.Binary.Reflection
    MAlonzo.Code.Relation.Binary.Bundles
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Triple
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Double
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Single
    MAlonzo.Code.Relation.Binary.Reasoning.Preorder
    MAlonzo.Code.Relation.Binary.Reasoning.Syntax
    MAlonzo.Code.Relation.Binary.Reasoning.Setoid
    MAlonzo.Code.Relation.Binary.Core
    MAlonzo.Code.Relation.Binary.Structures
    MAlonzo.Code.Relation.Binary.Properties.TotalOrder
    MAlonzo.Code.Relation.Binary.Properties.Poset
    MAlonzo.Code.Relation.Binary.Properties.DecTotalOrder
    MAlonzo.Code.Relation.Binary.Properties.Preorder
    MAlonzo.Code.Relation.Binary.Properties.Setoid
    MAlonzo.Code.Relation.Binary.Lattice.Bundles
    MAlonzo.Code.Relation.Binary.Lattice.Structures
    MAlonzo.Code.Relation.Binary.Lattice.Definitions
    MAlonzo.Code.Relation.Binary.Consequences
    MAlonzo.Code.Relation.Binary.Lattice
    MAlonzo.Code.Relation.Binary.PropositionalEquality
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Bundles
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Core
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Structures
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Definitions
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Construct.Trivial
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous
    MAlonzo.Code.Relation.Binary.Morphism.Structures
    MAlonzo.Code.Relation.Binary.Morphism.Definitions
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Core
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Properties
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Algebra
    MAlonzo.Code.Relation.Binary.Definitions
    MAlonzo.Code.Relation.Binary.Construct.Closure.Reflexive
    MAlonzo.Code.Relation.Binary.Construct.Closure.Reflexive.Properties
    MAlonzo.Code.Relation.Binary.Construct.Subst.Equality
    MAlonzo.Code.Relation.Binary.Construct.Intersection
    MAlonzo.Code.Relation.Binary.Construct.Constant.Core
    MAlonzo.Code.Relation.Binary.Construct.On
    MAlonzo.Code.Relation.Binary.Construct.NonStrictToStrict
    MAlonzo.Code.Relation.Binary.Construct.NaturalOrder.Left
    MAlonzo.Code.Relation.Binary.Construct.Flip.EqAndOrd
    MAlonzo.Code.Relation.Binary
    MAlonzo.Code.Relation.Nullary.Decidable
    MAlonzo.Code.Relation.Nullary.Negation
    MAlonzo.Code.Relation.Nullary.Negation.Core
    MAlonzo.Code.Relation.Nullary.Reflects
    MAlonzo.Code.Relation.Nullary.Indexed
    MAlonzo.Code.Relation.Nullary.Decidable.Core
    MAlonzo.Code.Relation.Unary
    MAlonzo.Code.Axiom.Extensionality.Propositional
    MAlonzo.Code.Axiom.UniquenessOfIdentityProofs
    MAlonzo.Code.Induction
    MAlonzo.Code.Effect.Functor
    MAlonzo.Code.Effect.Monad
    MAlonzo.Code.Effect.Applicative
    MAlonzo.Code.Effect.Empty
    MAlonzo.Code.Effect.Choice
    MAlonzo.Code.Algebra.Structures.Biased
    MAlonzo.Code.Algebra.Bundles.Raw
    MAlonzo.Code.Algebra.Bundles
    MAlonzo.Code.Algebra.Definitions.RawMagma
    MAlonzo.Code.Algebra.Definitions.RawMonoid
    MAlonzo.Code.Algebra.Definitions.RawSemiring
    MAlonzo.Code.Algebra.Core
    MAlonzo.Code.Algebra.Structures
    MAlonzo.Code.Algebra.Properties.Semiring.Exp
    MAlonzo.Code.Algebra.Properties.Monoid.Mult
    MAlonzo.Code.Algebra.Properties.Semigroup
    MAlonzo.Code.Algebra.Properties.RingWithoutOne
    MAlonzo.Code.Algebra.Properties.CommutativeSemigroup
    MAlonzo.Code.Algebra.Properties.AbelianGroup
    MAlonzo.Code.Algebra.Properties.Ring
    MAlonzo.Code.Algebra.Properties.Group
    MAlonzo.Code.Algebra.Lattice.Bundles.Raw
    MAlonzo.Code.Algebra.Lattice.Bundles
    MAlonzo.Code.Algebra.Lattice.Structures
    MAlonzo.Code.Algebra.Lattice.Properties.DistributiveLattice
    MAlonzo.Code.Algebra.Lattice.Properties.BooleanAlgebra
    MAlonzo.Code.Algebra.Lattice.Properties.Lattice
    MAlonzo.Code.Algebra.Lattice.Properties.Semilattice
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinMaxOp
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinOp
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MaxOp
    MAlonzo.Code.Algebra.Consequences.Base
    MAlonzo.Code.Algebra.Consequences.Setoid
    MAlonzo.Code.Algebra.Consequences.Propositional
    MAlonzo.Code.Algebra.Solver.Ring.Simple
    MAlonzo.Code.Algebra.Solver.Ring.Lemmas
    MAlonzo.Code.Algebra.Solver.Ring.AlmostCommutativeRing
    MAlonzo.Code.Algebra.Solver.Ring
    MAlonzo.Code.Algebra.Morphism.Structures
    MAlonzo.Code.Algebra.Morphism.Definitions
    MAlonzo.Code.Algebra.Morphism
    MAlonzo.Code.Algebra.Definitions
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Max
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Base
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MinMaxOp
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Min
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MinOp
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MaxOp
    MAlonzo.Code.Algebra.Construct.LiftedChoice
    MAlonzo.Code.Algebra
    MAlonzo.Code.Data.String
    MAlonzo.Code.Data.Parity.Base
    MAlonzo.Code.Data.Product
    MAlonzo.Code.Data.Vec.Base
    MAlonzo.Code.Data.Vec.Functional
    MAlonzo.Code.Data.Vec.NZ45Zary
    MAlonzo.Code.Data.Sign.Base
    MAlonzo.Code.Data.Sign.Properties
    MAlonzo.Code.Data.Nat.DivMod.Core
    MAlonzo.Code.Data.Nat.Divisibility
    MAlonzo.Code.Data.Nat.Divisibility.Core
    MAlonzo.Code.Data.Nat.Show
    MAlonzo.Code.Data.Nat.Base
    MAlonzo.Code.Data.Nat.Induction
    MAlonzo.Code.Data.Nat.DivMod
    MAlonzo.Code.Data.Nat.GeneralisedArithmetic
    MAlonzo.Code.Data.Nat.Solver
    MAlonzo.Code.Data.Nat.Properties
    MAlonzo.Code.Data.List.Effectful
    MAlonzo.Code.Data.List.Relation.Unary.AllPairs
    MAlonzo.Code.Data.List.Relation.Unary.All
    MAlonzo.Code.Data.List.Relation.Unary.Unique.Setoid
    MAlonzo.Code.Data.List.Relation.Unary.AllPairs.Core
    MAlonzo.Code.Data.List.Relation.Unary.All.Properties
    MAlonzo.Code.Data.List.Relation.Unary.Any
    MAlonzo.Code.Data.List.Relation.Unary.Any.Properties
    MAlonzo.Code.Data.List.Relation.Binary.Subset.Setoid
    MAlonzo.Code.Data.List.Relation.Binary.Subset.Propositional
    MAlonzo.Code.Data.List.Relation.Binary.Pointwise
    MAlonzo.Code.Data.List.Relation.Binary.Lex.Core
    MAlonzo.Code.Data.List.Relation.Binary.Lex.Strict
    MAlonzo.Code.Data.List.Relation.Binary.Equality.Setoid
    MAlonzo.Code.Data.List.Relation.Binary.Equality.Propositional
    MAlonzo.Code.Data.List.Relation.Binary.Lex
    MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Base
    MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Properties
    MAlonzo.Code.Data.List.Base
    MAlonzo.Code.Data.List.Extrema
    MAlonzo.Code.Data.List.Extrema.Core
    MAlonzo.Code.Data.List.NonEmpty.Base
    MAlonzo.Code.Data.List.Membership.DecSetoid
    MAlonzo.Code.Data.List.Membership.Propositional.Properties.Core
    MAlonzo.Code.Data.List.Membership.Propositional.Properties
    MAlonzo.Code.Data.List.Membership.Setoid.Properties
    MAlonzo.Code.Data.List.Membership.Setoid
    MAlonzo.Code.Data.List.Membership.Propositional
    MAlonzo.Code.Data.List.Membership.DecPropositional
    MAlonzo.Code.Data.List.Properties
    MAlonzo.Code.Data.Bool
    MAlonzo.Code.Data.Sum.Function.Setoid
    MAlonzo.Code.Data.Sum.Function.Propositional
    MAlonzo.Code.Data.Sum.Relation.Binary.Pointwise
    MAlonzo.Code.Data.Sum.Base
    MAlonzo.Code.Data.Sum.Properties
    MAlonzo.Code.Data.Sum.Algebra
    MAlonzo.Code.Data.Unit.Polymorphic.Base
    MAlonzo.Code.Data.Unit.Polymorphic.Properties
    MAlonzo.Code.Data.Unit.Base
    MAlonzo.Code.Data.Unit.Polymorphic
    MAlonzo.Code.Data.Unit.Properties
    MAlonzo.Code.Data.List
    MAlonzo.Code.Data.Char.Base
    MAlonzo.Code.Data.Char.Properties
    MAlonzo.Code.Data.Char
    MAlonzo.Code.Data.String.Base
    MAlonzo.Code.Data.String.Properties
    MAlonzo.Code.Data.Unit
    MAlonzo.Code.Data.Maybe.Effectful
    MAlonzo.Code.Data.Maybe.Relation.Unary.All
    MAlonzo.Code.Data.Maybe.Relation.Unary.Any
    MAlonzo.Code.Data.Maybe.Base
    MAlonzo.Code.Data.Integer
    MAlonzo.Code.Data.Fin.Patterns
    MAlonzo.Code.Data.Fin.Base
    MAlonzo.Code.Data.Fin.Properties
    MAlonzo.Code.Data.Product.Function.NonDependent.Setoid
    MAlonzo.Code.Data.Product.Function.NonDependent.Propositional
    MAlonzo.Code.Data.Product.Function.Dependent.Propositional
    MAlonzo.Code.Data.Product.Relation.Unary.All
    MAlonzo.Code.Data.Product.Relation.Binary.Pointwise.NonDependent
    MAlonzo.Code.Data.Product.Base
    MAlonzo.Code.Data.Product.Properties
    MAlonzo.Code.Data.Product.Algebra
    MAlonzo.Code.Data.Sum
    MAlonzo.Code.Data.Nat
    MAlonzo.Code.Data.Sign
    MAlonzo.Code.Data.Empty
    MAlonzo.Code.Data.Empty.Polymorphic
    MAlonzo.Code.Data.Empty.Irrelevant
    MAlonzo.Code.Data.Irrelevant
    MAlonzo.Code.Data.Bool.Base
    MAlonzo.Code.Data.Bool.Properties
    MAlonzo.Code.Data.These.Base
    MAlonzo.Code.Data.Integer.Base
    MAlonzo.Code.Data.Integer.DivMod
    MAlonzo.Code.Data.Integer.Properties
    MAlonzo.Code.Data.Digit
    MAlonzo.Code.Data.Maybe
    MAlonzo.Code.Function
    MAlonzo.Code.IO.Base
    MAlonzo.Code.IO.Finite
    MAlonzo.Code.IO.Primitive
    MAlonzo.Code.IO.Primitive.Finite
    MAlonzo.Code.Qmain

executable marlowe-agda
  import:         lang
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:
    , base
    , ghc-prim
    , marlowe-agda
    , text
